2002-06-12  Eli Zaretskii  <eliz@is.elta.co.il>

	* textmodes/bibtex.el: Change the maintainer to "none".

2002-06-12  Juanma Barranquero  <lektu@terra>

	* term/w32-win.el (x-handle-switch): Fix handling of
	x-invocation-args for switches with arguments.

2002-06-12  Richard M. Stallman  <rms@gnu.org>

	* info.el (Info-fontify-node): Compute header line specially
	if node has no next, previous or up links.
	Hide the part of the first line that is used in the header.
	Use Info-next-link-keymap, etc.
	(Info-next-link-keymap, Info-prev-link-keymap) 
	(Info-up-link-keymap): New variables.

	* international/mule-diag.el (describe-char-after): Doc fix.

	* view.el (view-mode-enter): Clarify echo area message.

	* info.el (Info-select-node): Turn header line on or off here.
	(Info-setup-header-line): Function deleted.
	(Info-mode): Make Info-header-line local.
	(Info-fontify-node): Ignore Info-use-header-line.
	Unconditionally compute what the header line should be, and
	store it on the `header-line' property of the node's first char.
	Bind [header-line down-mouse-1].
	Use `keymap' property, not `local-map'.
	Bind [mouse-2] for mouse clicks on the node line in the text.

	* font-lock.el (font-lock-beginning-of-syntax-function): Doc fix.

2002-06-12  Miles Bader  <miles@gnu.org>

	* comint.el (comint-send-input): Properly handle empty and
	no-newline input regions.

2002-06-12  Colin Walters  <walters@gnu.org>

	* calc/calc.el: Use `when', `unless'.
	(calc-trail-mode): Use an italic `font-lock-face'.
	(calc-refresh): Ditto.

2002-06-12  Colin Walters  <walters@debian.org>
	
	* font-core.el (font-lock-core-only): Variable deleted.  All uses
	removed.
	(font-lock-set-defaults): Variable alist settings moved back into
	font-lock-set-defaults-1.
	(turn-on-font-lock-if-enabled): Always turn on font-lock unless it
	is specifically excluded by the user.
	
	* font-lock.el (font-lock-set-defaults-1): Set variable alist here.
	